# people_counter_harkay

./: .gitignore  CMakeLists.txt  main.cpp  person_counter.py
